# nick_bot

./: Dockerfile  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: docker.yml
heroes/: get_all_heroes.py
nick_bot/: main.py
nick_bot/datas/: OverwatchApi.py  OverwatchDB.py
nick_bot/db/: OverwatchDB.py
nick_bot/services/: BattletagService.py  DatabaseSingletonFactory  MessageHandler.py  MessageService.py  RenameService.py  SessionService.py  SingletonFactory.py  TimeoutService.py
tests/: test_nick_bot.py
