[tool.poetry]
name = "nick_bot"
version = "0.1.0"
description = ""
authors = ["B3ND3L <delahais.b@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
